--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "gulp dev",
     "dist": "gulp dist",
-    "deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages"
+    "deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
+    "public": "sh ./scripts/buildSite.sh"
   },
   "dependencies": {
     "less": "^2.7.2",
