--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "gulp dev",
     "dist": "gulp dist",
     "deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
-    "publish": "sh ./scripts/buildSite.sh"
+    "publish": "sh ./scripts/buildSite.sh",
+    "test": "karma start"
   },
   "dependencies": {
     "less": "^2.7.2",
@@ -35,6 +36,14 @@
     "babel-register": "^6.5.2",
     "grommet-toolbox": "^0.4.5",
     "gulp": "^3.9.0",
-    "redux-devtools": "^3.3.1"
+    "jasmine": "^2.5.3",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-growl-reporter": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.2",
+    "redux-devtools": "^3.3.1",
   }
 }
